Detector will now look for the USB name only on Linux
This change has been made for Raspberry Pi, which shall detect an USB by its name only without being mounted.